data/derived/fa15/progs/unify/prog2770.ml.out
Characters 70-71:
  let fixpoint (f,b) = wwhile (let g x= let xx = f in (xx,b = f b) in g,b);;
                                                                        ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
